# grokking-concurrency-exercise

./: .gitignore  404.html  CLAUDE.md  Dockerfile  README.md  gulpfile.js  index.html  mkdocs.yml  package-lock.json  package.json
.claude/: README.md  SKILLS_TEMPLATE.md
.github/workflows/: test.yml
all/: index.html
all/part-1-ch02-sequential/: index.html
all/part-2-ch04-05-threads/: index.html
all/part-3-ch06-multitasking/: index.html
all/part-4-ch07-parallel-patterns/: index.html
all/part-5-ch08-09-synchronization/: index.html
all/part-6-ch10-11-nonblocking-io/: index.html
all/part-7-ch12-async/: index.html
all/part-8-ch13-mapreduce/: index.html
apps/clojure/: .gitignore  CHANGELOG.md  README.md  project.clj
apps/csharp/: GrokkingConcurrency.CSharp.sln
apps/fsharp/: GrokkingConcurrency.FSharp.sln
apps/haskell/: .gitignore  CHANGELOG.md  README.md  grokking-concurrency-haskell.cabal
apps/haskell/src/Ch02/: PasswordCracker.hs
apps/haskell/src/Ch04/: ThreadBasics.hs
apps/haskell/src/Ch05/: PasswordCrackerParallel.hs
apps/haskell/src/Ch06/: GameLoop.hs
apps/haskell/src/Ch07/: Pipeline.hs  VoteCounter.hs
apps/haskell/src/Ch08/: BankAccount.hs
apps/haskell/src/Ch13/: WordCount.hs
apps/haskell/test/: Ch02Spec.hs  Ch04Spec.hs  Ch05Spec.hs  Ch06Spec.hs  Ch07Spec.hs  Ch08Spec.hs  Ch13Spec.hs
apps/java/: .gitignore  build.gradle  settings.gradle
apps/rust/: Cargo.toml
apps/scala/: build.sbt
clojure/: index.html
clojure/part-1/: index.html
clojure/part-2/: index.html
clojure/part-3/: index.html
clojure/part-4/: index.html
clojure/part-5/: index.html
clojure/part-6/: index.html
clojure/part-7/: index.html
clojure/part-8/: index.html
csharp/: index.html
csharp/part-1/: index.html
csharp/part-2/: index.html
csharp/part-3/: index.html
csharp/part-4/: index.html
csharp/part-5/: index.html
csharp/part-6/: index.html
csharp/part-7/: index.html
docs/: index.md
docs/article/: index.md
fsharp/: index.html
haskell/: index.html
java/: index.html
python/: index.html
rust/: index.html
scala/: index.html
search/: search_index.json
(+194 files in other folders)
