cabal-version:       2.2

name:                grokking-concurrency-haskell
version:             0.1.0.0
synopsis:            Grokking Concurrency in Haskell
description:         Learning concurrent programming with Haskell
license:             BSD-3-Clause
license-file:        LICENSE
author:              Project Team
maintainer:          example@example.com
copyright:           2025
category:            Concurrency
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Ch02.PasswordCracker
                     , Ch04.ThreadBasics
                     , Ch05.PasswordCrackerParallel
                     , Ch06.GameLoop
                     , Ch07.VoteCounter
                     , Ch07.Pipeline
                     , Ch08.BankAccount
                     , Ch13.WordCount
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , async
                     , stm
                     , cryptohash-sha256
                     , bytestring
                     , text
                     , containers
                     , parallel
  ghc-options:         -Wall

test-suite grokking-concurrency-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Ch02Spec
                     , Ch04Spec
                     , Ch05Spec
                     , Ch06Spec
                     , Ch07Spec
                     , Ch08Spec
                     , Ch13Spec
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , grokking-concurrency-haskell
                     , hspec
                     , async
                     , stm
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/k2works/grokking-concurrency-exercise
